--- a/contacto.html
+++ b/contacto.html
@@ -82,10 +82,12 @@
                     <!-- Genero -->
                     <div id="radiogenero" class="form-control">
                         <span>Genero</span><br>
-                        <input type="radio" name="Genero" id="Masculino" value="Masculino" >
+                        <input type="radio" name="Genero" id="Masculino" value="Masculino" checked>
                         <label for="Masculino">Masculino</label><br>
                         <input type="radio" name="Genero" id="Femenino" value="Femenino">
                         <label for="Femenino">Femenino</label><br>
+                        <input type="radio" name="Genero" id="NoEspecifica" value="NoEspecifica">
+                        <label for="NoEspecifica">Prefiero no decirlo</label><br>
                     </div>
 
                     <!-- Provincia -->
