--- a/historia.html
+++ b/historia.html
@@ -39,6 +39,7 @@
                 <a href="palmares.html">Palmarés</a>
                 <a href="historia.html">Historia</a>
                 <a href="estadio.html">Estadio</a>
+                <a href="shop.html">Tienda</a>
             </div>
         </nav>
     </header>
