--- a/productos.html
+++ b/productos.html
@@ -12,6 +12,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Anton&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/f4764f5c10.js" crossorigin="anonymous"></script>
 </head>
 
@@ -44,39 +46,40 @@
         </nav>
     </header>
 
-    <main>
+    <main id="app">
         <div class="bannercontacto">
-            <img src="./assets/fotopalmares1.png" alt="Banner Palmares">
+            <img src="./assets/fototienda1.png" alt="Banner Tienda">
         </div>
-        <p id="ubic"><a href="index.html">Inicio</a> / Palmarés</p>
-        <h1 class="titulo">Títulos de Belgrano AC</h1>
-        <div id="appp">
-            <h2 class="subt">Titulos Regionales</h2>
-            <div class="linea">
-
-                <div v-for="dato in datos">
-                    <div v-if="dato.categoria == 'Regional' " class="trofeo">
-                        <img :src="dato.img" :alt="dato.nombre">
-                        <p class="nomynum">{{ dato.nombre }} <br> ({{ dato.año }})</p>
+        <p id="ubic"><a href="index.html">Inicio</a> / Tienda</p>
+        <div id="login">
+            <a href="./shop.html">Volver</a>
+        </div>
+        <h1 class="titulo">Merch Oficial de Belgrano</h1>
+        <div class="botones">
+            <a class="btn btn-success" href="./producto_nuevo.html"></i>Agregar Producto</a>
+        </div>
+        <div id="prods">
+            <div v-for="producto in productos" :key="producto.id" id="caja">
+                <div>
+                    <p id="nombre"> ({{producto.id}}) {{producto.nombre}}</p>
+                </div>
+                <div>
+                    <img :src="producto.imagen" :alt="producto.nombre">
+                </div>
+                <div id="info">
+                    <p id="precio">$ {{producto.precio}}</p>
+                    <p v-if="producto.target">{{producto.target}}</p>
+                    <div v-if="producto.talles">
+                        <div id="talles">
+                            <span v-for="talle in producto.talles.split(',').map(t => t.trim())" :key="talle"
+                                class="talle-item">{{ talle }}</span>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <h2 class="subt">Titulos Nacionales</h2>
-            <div class="linea">
-                <div v-for="dato in datos">
-                    <div v-if="dato.categoria == 'Nacional' " class="trofeo">
-                        <img :src="dato.img" :alt="dato.nombre">
-                        <p class="nomynum">{{ dato.nombre }} <br> ({{ dato.año }})</p>
-                    </div>
-                </div>
-            </div>
-            <h2 class="subt">Titulos Internacionales y Mundiales</h2>
-            <div class="linea">
-                <div v-for="dato in datos">
-                    <div v-if="dato.categoria == 'Internacional' || dato.categoria == 'Mundial' " class="trofeo">
-                        <img :src="dato.img" :alt="dato.nombre">
-                        <p class="nomynum">{{ dato.nombre }} <br> ({{ dato.año }})</p>
-                    </div>
+                <div class="botones">
+                    <span><a class="btn btn-primary" :href="'producto_update.html?id='+ producto.id">Editar</a></a>
+                        <span><button type="button" class="btn btn-danger"
+                                v-on:click="eliminar(producto.id)">Eliminar</button></span>
                 </div>
             </div>
         </div>
@@ -114,8 +117,13 @@
             </div>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
+        integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
+        crossorigin="anonymous"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <script src="./js/consumidortitulos.js"></script>
+    <script src="./js/productos.js"></script>
 </body>
-
 </html>
